# model/request/login_refresh_token_request.go
@@ -1,0 +1,5 @@
+package request
+
+type LoginRefreshTokenRequest struct {
+	RefreshToken string `validate:"required" json:"refreshToken"`
+}
